--- a/client_app/src/app/app.component.html
+++ b/client_app/src/app/app.component.html
@@ -18,26 +18,26 @@
             <p class="mat-small">Home</p>
           </div>
           <div class="item">
-            <button mat-icon-button color="accent" routerLink="/stats">
+            <button mat-icon-button color="accent" routerLink="/search">
               <mat-icon>search</mat-icon>
             </button>
             <p class="mat-small">Search</p>
           </div>
           <div class="item">
-            <button mat-icon-button color="accent" routerLink="/list">
+            <button mat-icon-button color="accent" routerLink="">
               <mat-icon fontSet="material-symbols-outlined">casino</mat-icon>
             </button>
             <p class="mat-small">Random</p>
           </div>
           <div class="item">
-            <button mat-icon-button color="accent">
+            <button mat-icon-button color="accent" routerLink="">
               <mat-icon fontSet="material-symbols-outlined">shopping_basket</mat-icon>
             </button>
             <p class="mat-small">Ingredients</p>
           </div>
         </div>
         <div class="profile">
-          <button mat-icon-button color="accent" routerLink="/stats">
+          <button mat-icon-button color="accent" routerLink="">
             <mat-icon>account_circle</mat-icon>
           </button>
           <p class="mat-small">Account</p>
