--- a/client_app/src/app/components/create-recipe/create-recipe.component.html
+++ b/client_app/src/app/components/create-recipe/create-recipe.component.html
@@ -33,6 +33,9 @@
                                 <mat-form-field subscriptSizing="dynamic" appearance="outline">
                                     <mat-label>Ingredient</mat-label>
                                     <input type="text" matInput formControlName="{{i}}">
+                                    <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)">
+                                        <mat-icon>delete_24px</mat-icon>
+                                    </button>
                                 </mat-form-field>
                             </li>
                         </div>
@@ -41,10 +44,6 @@
                         <button type="button" mat-mini-fab color="secondary" style="margin-top: 8px; margin-right: 16px;"
                             (click)="addIngredientItem()">
                             <mat-icon>add_24px</mat-icon>
-                        </button>
-                        <button type="button" mat-mini-fab color="secondary" style="margin-top: 8px;"
-                            [disabled]="form.controls.ingredients.length == 1" (click)="removeIngredientItem()">
-                            <mat-icon>delete_24px</mat-icon>
                         </button>
                     </div>
                 </mat-card-content>
