--- a/client_app/src/app/components/create-recipe/create-recipe.component.html
+++ b/client_app/src/app/components/create-recipe/create-recipe.component.html
@@ -33,7 +33,7 @@
                                 <mat-form-field subscriptSizing="dynamic" appearance="outline">
                                     <mat-label>Ingredient</mat-label>
                                     <input type="text" matInput formControlName="{{i}}">
-                                    <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)">
+                                    <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)" [disabled]="form.controls.ingredients.controls.length === 1 ? true : null">
                                         <mat-icon>delete_24px</mat-icon>
                                     </button>
                                 </mat-form-field>
