--- a/client_app/src/app/components/view-recipe/view-recipe.component.html
+++ b/client_app/src/app/components/view-recipe/view-recipe.component.html
@@ -24,5 +24,9 @@
                 </mat-card-content>
             </mat-card>
         </div>
+        <mat-card-actions>
+            <button mat-button disabled="">Edit</button>
+            <button mat-button (click)="deleteRecipe()">Delete</button>
+          </mat-card-actions>
     </mat-card>
 </div>
