--- a/client_app/src/app/components/view-recipe/view-recipe.component.html
+++ b/client_app/src/app/components/view-recipe/view-recipe.component.html
@@ -25,7 +25,7 @@
             </mat-card>
         </div>
         <mat-card-actions>
-            <button mat-button disabled="">Edit</button>
+            <button mat-button routerLink="/edit/{{recipe.id}}">Edit</button>
             <button mat-button (click)="deleteRecipe()">Delete</button>
           </mat-card-actions>
     </mat-card>
