Added logic to wait for data from backend to load

--- a/client_app/src/app/app.component.html
+++ b/client_app/src/app/app.component.html
@@ -24,13 +24,13 @@
             <p class="mat-small">Search</p>
           </div>
           <div class="item">
-            <button mat-icon-button color="accent" routerLink="">
+            <button mat-icon-button color="accent" routerLink="" disabled="true">
               <mat-icon fontSet="material-symbols-outlined">casino</mat-icon>
             </button>
             <p class="mat-small">Random</p>
           </div>
           <div class="item">
-            <button mat-icon-button color="accent" routerLink="">
+            <button mat-icon-button color="accent" routerLink="" disabled="true">
               <mat-icon fontSet="material-symbols-outlined">shopping_basket</mat-icon>
             </button>
             <p class="mat-small">Ingredients</p>
