--- a/client_app/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/client_app/src/app/components/edit-recipe/edit-recipe.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <mat-card class="example-card">
+    <mat-card class="example-card" *ngIf="isLoaded">
         <div class="image-container">
             <mat-icon class="upload-icon" aria-hidden="false" aria-label="Example home icon"
                 fontIcon="file_upload"></mat-icon>
