--- a/client_app/src/app/components/view-recipe/view-recipe.component.html
+++ b/client_app/src/app/components/view-recipe/view-recipe.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <mat-card class="example-card">
+    <mat-card class="example-card" *ngIf="isLoaded">
         <div class="image-container">
             <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         </div>
