Added registration and login components but functionality is still missing

--- a/client_app/src/app/app.component.html
+++ b/client_app/src/app/app.component.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="profile">
-          <button mat-icon-button color="accent" routerLink="">
+          <button mat-icon-button color="accent" routerLink="/login">
             <mat-icon>account_circle</mat-icon>
           </button>
           <p class="mat-small">Account</p>
