--- a/client_app/src/app/components/login/login.component.html
+++ b/client_app/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
                 <mat-divider></mat-divider>
 
                 <button type="submit" cdkFocusInitial color="primary" mat-flat-button class="submit-button"
-                    name="submit-button">Create Account
+                    name="submit-button">Login
                 </button>
 
                 <mat-divider></mat-divider>
