Added author name to view and search components

--- a/client_app/src/app/components/search-recipe/search-recipe.component.html
+++ b/client_app/src/app/components/search-recipe/search-recipe.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="content">
                 <mat-card-title>{{recipe.title}}</mat-card-title>
-                <mat-card-subtitle class="text-oneline">{{recipe.description}}</mat-card-subtitle>
+                <mat-card-subtitle class="text-oneline">by {{recipe.userName}}</mat-card-subtitle>
             </div>
         </mat-card>
     </div>
