--- a/client_app/src/app/components/view-recipe/view-recipe.component.html
+++ b/client_app/src/app/components/view-recipe/view-recipe.component.html
@@ -1,5 +1,10 @@
 <div class="container">
     <mat-card class="example-card" *ngIf="isLoaded">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{recipe.userName}}</mat-card-title>
+            <mat-card-subtitle>Author</mat-card-subtitle>
+          </mat-card-header>
         <div class="image-container">
             <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         </div>
