--- a/client_app/src/app/components/view-recipe/view-recipe.component.html
+++ b/client_app/src/app/components/view-recipe/view-recipe.component.html
@@ -29,7 +29,7 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        <mat-card-actions *ngIf="canEdit()">
+        <mat-card-actions *ngIf="authService.canEdit(recipe.id)">
             <button mat-button routerLink="/edit/{{recipe.id}}">Edit</button>
             <button mat-button (click)="deleteRecipe()">Delete</button>
           </mat-card-actions>
