--- a/client_app/src/app/components/create-recipe/create-recipe.component.html
+++ b/client_app/src/app/components/create-recipe/create-recipe.component.html
@@ -11,6 +11,7 @@
                         <mat-label>Title</mat-label>
                         <input type="text" matInput formControlName="title" placeholder="Recipe title">
                         <mat-hint>Choose an appropriate name for the recipe</mat-hint>
+                        <mat-error *ngIf="form.controls.title.invalid">{{getErrorMessage(form.controls.title, "Title")}}</mat-error>
                     </mat-form-field>
                 </mat-card-header>
                 <mat-card-content class="info-container">
@@ -20,6 +21,7 @@
                             #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2" cdkAutosizeMaxRows={{maxRows}}
                             placeholder="Detailed description of the recipe"></textarea>
                         <mat-hint>Describe the recipe and all the involved steps to making the final meal</mat-hint>
+                        <mat-error *ngIf="form.controls.description.invalid">{{getErrorMessage(form.controls.description, "Description")}}</mat-error>
                     </mat-form-field>
                 </mat-card-content>
             </div>
@@ -33,6 +35,7 @@
                                 <mat-form-field subscriptSizing="dynamic" appearance="outline">
                                     <mat-label>Ingredient</mat-label>
                                     <input type="text" matInput formControlName="{{i}}">
+                                    <mat-error *ngIf="form.controls.ingredients.invalid">{{getErrorMessage(ingredient, "Ingredient text")}}</mat-error>
                                     <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)" [disabled]="form.controls.ingredients.controls.length === 1 ? true : null">
                                         <mat-icon>delete_24px</mat-icon>
                                     </button>
