--- a/client_app/src/app/components/error-modal/error-modal.component.html
+++ b/client_app/src/app/components/error-modal/error-modal.component.html
@@ -4,9 +4,16 @@
     <b>Status Code: {{ data.status }}</b>
   </p>
   <p>Something went wrong!</p>
-  <p class="error-message">
-    {{ data.message }}
-  </p>
+  <div class="error-message">
+    <p>
+      {{ data.message }}
+    </p>
+    <ul>
+      <li *ngFor="let item of data.errors| keyvalue">
+        {{item.value}}
+      </li>
+    </ul>
+  </div>
 </div>
 <div mat-dialog-actions align="end">
   <button mat-stroked-button color="warn" (click)="close()">Dismiss</button>
