--- a/client_app/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/client_app/src/app/components/edit-recipe/edit-recipe.component.html
@@ -11,6 +11,7 @@
                         <mat-label>Title</mat-label>
                         <input type="text" matInput formControlName="title" placeholder="Recipe title">
                         <mat-hint>Choose an appropriate name for the recipe</mat-hint>
+                        <mat-error *ngIf="form.controls.title.invalid">{{getErrorMessage(form.controls.title, "Title")}}</mat-error>
                     </mat-form-field>
                 </mat-card-header>
                 <mat-card-content class="info-container">
@@ -20,6 +21,7 @@
                             #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="2" cdkAutosizeMaxRows={{maxRows}}
                             placeholder="Detailed description of the recipe"></textarea>
                         <mat-hint>Describe the recipe and all the involved steps to making the final meal</mat-hint>
+                        <mat-error *ngIf="form.controls.description.invalid">{{getErrorMessage(form.controls.description, "Title")}}</mat-error>
                     </mat-form-field>
                 </mat-card-content>
             </div>
@@ -29,13 +31,14 @@
                         <div mat-subheader class="list-header">Ingredient List</div>
                         <mat-divider></mat-divider>
                         <div formArrayName="ingredients">
-                            <li *ngFor="let ingredient of ingredients.controls; let i = index">
+                            <li *ngFor="let ingredient of form.controls.ingredients.controls; let i = index">
                                 <mat-form-field subscriptSizing="dynamic" appearance="outline">
                                     <mat-label>Ingredient</mat-label>
                                     <input type="text" matInput formControlName="{{i}}">
-                                    <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)" [disabled]="ingredients.controls.length === 1 ? true : null">
+                                    <button matSuffix mat-icon-button aria-label="Clear" (click)="removeIngredientItem(i)" [disabled]="form.controls.ingredients.controls.length=== 1 ? true : null">
                                         <mat-icon>delete_24px</mat-icon>
                                     </button>
+                                    <mat-error *ngIf="form.controls.ingredients.invalid">{{getErrorMessage(ingredient, "Ingredient text")}}</mat-error>
                                 </mat-form-field>
                             </li>
                         </div>
